<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/FView">

        <TextView
            android:id="@+id/textView"
            style="@style/TxtRgStyle"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/txt_select_a_option"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_camera"
            style="@style/TxtSemiSmallStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/take_photo"
            android:padding="12dp"
            android:drawablePadding="12dp"
            android:textSize="18sp"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:drawableStartCompat="@drawable/ic_take_camera" />

        <TextView
            android:id="@+id/txt_gallery"
            style="@style/TxtSemiSmallStyle"
            android:text="@string/txt_gallery"
            android:layout_width="match_parent"
            android:padding="12dp"
            android:textSize="18sp"
            android:drawablePadding="12dp"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_camera"
            app:drawableStartCompat="@drawable/ic_folder" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>